Fix components from shifting when error message displays

--- a/src/components/PhotoListForm/PhotoListForm.css
+++ b/src/components/PhotoListForm/PhotoListForm.css
@@ -1,7 +1,7 @@
 .checkboxSection {
   padding: 1.5em;
 }
-.checkboxHeader {
+.sectionHeader {
   font-family: Roboto, sans-serif;
   font-size: 1.5em;
 }
